modules/gdscript/tests/scripts/analyzer/errors/get_node_shorthand_in_static_function.gd
# GH-75645

extends Node

static func static_func():
	var a = $Node

func test():
	pass
